# Dteam-django-practical-test

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
CVProject/: settings.py  urls.py
api/: serializers.py  tests.py  urls.py  views.py
log_app/: middleware.py  models.py  tests.py  urls.py  views.py
main/: context_processors.py  models.py  serializers.py  tests.py  urls.py  views.py
main/fixtures/: example_cv.json
templates/: api_page.html  cv_details.html  cv_translation.html  get_cv_id.html  logs.html  main_page.html  settings.html
